# GeneSearchingAssignment

./: .gitignore  CMakeLists.txt  build-instruction.docx
ProgrammingProject/: DnaABoxesGenerator.cpp  DnaABoxesGenerator.hpp  Sequence.cpp  Sequence.hpp  main.cpp
ProgrammingProject.xcodeproj/: project.pbxproj
ProgrammingProject.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ProgrammingProject.xcodeproj/project.xcworkspace/xcuserdata/liangy.xcuserdatad/: UserInterfaceState.xcuserstate
ProgrammingProject.xcodeproj/project.xcworkspace/xcuserdata/liangy.xcuserdatad/xcdebugger/: Expressions.xcexplist
ProgrammingProject.xcodeproj/xcshareddata/xcschemes/: ProgramminngProject.xcscheme  Test.xcscheme
ProgrammingProject.xcodeproj/xcuserdata/liangy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ProgrammingProject.xcodeproj/xcuserdata/liangy.xcuserdatad/xcschemes/: xcschememanagement.plist
ProgramminngProject/: Sequence.cpp  Sequence.hpp  main.cpp
ProgramminngProject.xcodeproj/: project.pbxproj
ProgramminngProject.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ProgramminngProject.xcodeproj/project.xcworkspace/xcuserdata/liangy.xcuserdatad/: UserInterfaceState.xcuserstate
ProgramminngProject.xcodeproj/project.xcworkspace/xcuserdata/liangy.xcuserdatad/xcdebugger/: Expressions.xcexplist
ProgramminngProject.xcodeproj/xcshareddata/xcschemes/: ProgramminngProject.xcscheme
ProgramminngProject.xcodeproj/xcuserdata/liangy.xcuserdatad/xcschemes/: xcschememanagement.plist
Test/: main.cpp
pre-built/: ProgrammingProject  result.txt
